--- a/static/css/bootstrap.css
+++ b/static/css/bootstrap.css
@@ -7470,6 +7470,9 @@ body {
 .col-titles {
   padding: 0 23px; }
 
+.panel .panel-group-collapsible {
+  border-bottom: 0; }
+
 @media (max-width: 767px) {
   .panel-group-collapsible-xs {
     border-bottom: 1px solid #aaaaaa; }
